@@ -82,6 +82,7 @@ Sarlós Tamás
 Thobias Schlemmer
 Jan Seeger
 Jose da Silva
+Paulo Ney de Souza
 Roland Smith
 Munzir Taha
 Tímár András
