@@ -6,6 +6,7 @@
 	* hun#2986756 mingw build fix
 	* hun#2986756 fix double-free
 	* hun#2059896 fix crash in interactive mode without nls
+	* hun#2917914 add some extra words to the latexparser
 
 2010-04-14 Caolán McNamara <cmc at OOo>:
 	* hun#2813804 fix segfault on hu_HU stemming
